// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wallet with XEC balances 1`] = `
Array [
  <div
    className="sc-eHgmQL jcvoLq"
  >
    <div
      className="sc-jKJlTe jrzEcV"
    >
      <h4
        className="sc-eNQAEJ cwroNb"
      >
        MigrationTestAlpha
      </h4>
      <a
        href="/configure"
        onClick={[Function]}
      >
        <svg
          className="sc-jTzLTM bTdWCF"
        >
          edit.svg
        </svg>
      </a>
      <div>
         
        <button
          aria-checked={false}
          className="ant-switch ant-switch-small"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="switch"
          type="button"
        >
          <div
            className="ant-switch-handle"
          />
          <span
            className="ant-switch-inner"
          >
            <svg
              className="sc-kAzzGY fUTkYj"
            >
              eye-invisible.svg
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="sc-brqgnP jHOLle"
    >
      You currently have 0 
      XEC
      <br />
      Deposit some funds to use this feature
    </div>
  </div>,
  <div
    className="sc-iAyFgw eRQdeW"
  >
    <div
      className="ant-row"
      style={Object {}}
      type="flex"
    >
      <div
        className="ant-col ant-col-24"
        style={Object {}}
      >
        <div
          className="sc-jbKcbu wUzOX"
        >
          <h2>
            eCash Namespace Alias
          </h2>
        </div>
        <div
          className="sc-iAyFgw eRQdeW"
        >
          <div
            className="sc-bRBYWo fqvvXE"
          >
            <form
              className="ant-form ant-form-horizontal"
              onReset={[Function]}
              onSubmit={[Function]}
              style={
                Object {
                  "width": "auto",
                }
              }
            >
              <div
                className="ant-form-item"
              >
                <div
                  className="ant-row ant-form-item-row"
                  style={Object {}}
                >
                  <div
                    className="ant-col ant-form-item-control"
                    style={Object {}}
                  >
                    <div
                      className="ant-form-item-control-input"
                    >
                      <div
                        className="ant-form-item-control-input-content"
                      >
                        <div
                          className="sc-bRBYWo fqvvXE"
                        >
                          <div
                            className="ant-form-item ant-form-item-with-help ant-form-item-has-error"
                          >
                            <div
                              className="ant-row ant-form-item-row"
                              style={Object {}}
                            >
                              <div
                                className="ant-col ant-form-item-control"
                                style={Object {}}
                              >
                                <div
                                  className="ant-form-item-control-input"
                                >
                                  <div
                                    className="ant-form-item-control-input-content"
                                  >
                                    <span
                                      className="ant-input-group-wrapper ant-input-group-wrapper-status-error"
                                    >
                                      <span
                                        className="ant-input-wrapper ant-input-group"
                                      >
                                        <span
                                          className="ant-input-affix-wrapper ant-input-affix-wrapper-status-error"
                                          hidden={null}
                                          onClick={[Function]}
                                          style={null}
                                        >
                                          <span
                                            className="ant-input-prefix"
                                          >
                                            <svg
                                              className="sc-kGXeez iHLPLV"
                                            >
                                              user.svg
                                            </svg>
                                          </span>
                                          <input
                                            autoComplete="off"
                                            className="ant-input"
                                            hidden={null}
                                            name="aliasName"
                                            onBlur={[Function]}
                                            onChange={[Function]}
                                            onFocus={[Function]}
                                            onKeyDown={[Function]}
                                            placeholder="Enter a desired alias"
                                            required={true}
                                            style={null}
                                            type="text"
                                            value=""
                                          />
                                        </span>
                                        <span
                                          className="ant-input-group-addon"
                                        >
                                           . xec
                                        </span>
                                      </span>
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <p />
                        <div
                          className="sc-hmzhuo fYlBBZ"
                        >
                          <label
                            className="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-wrapper-in-form-item sc-fBuWsC bHZMFZ"
                          >
                            <span
                              className="ant-checkbox ant-checkbox-checked"
                              style={Object {}}
                            >
                              <input
                                checked={true}
                                className="ant-checkbox-input"
                                disabled={false}
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                onKeyDown={[Function]}
                                onKeyPress={[Function]}
                                onKeyUp={[Function]}
                                type="checkbox"
                              />
                              <span
                                className="ant-checkbox-inner"
                              />
                            </span>
                            <span>
                              Register to the active wallet address
                            </span>
                          </label>
                        </div>
                        <button
                          className="sc-fAjcbJ hqeYCi"
                          disabled={true}
                          onClick={[Function]}
                        >
                          <span
                            aria-label="user-add"
                            className="anticon anticon-user-add"
                            role="img"
                            style={
                              Object {
                                "fontSize": 20,
                              }
                            }
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="user-add"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M678.3 642.4c24.2-13 51.9-20.4 81.4-20.4h.1c3 0 4.4-3.6 2.2-5.6a371.67 371.67 0 00-103.7-65.8c-.4-.2-.8-.3-1.2-.5C719.2 505 759.6 431.7 759.6 349c0-137-110.8-248-247.5-248S264.7 212 264.7 349c0 82.7 40.4 156 102.6 201.1-.4.2-.8.3-1.2.5-44.7 18.9-84.8 46-119.3 80.6a373.42 373.42 0 00-80.4 119.5A373.6 373.6 0 00137 888.8a8 8 0 008 8.2h59.9c4.3 0 7.9-3.5 8-7.8 2-77.2 32.9-149.5 87.6-204.3C357 628.2 432.2 597 512.2 597c56.7 0 111.1 15.7 158 45.1a8.1 8.1 0 008.1.3zM512.2 521c-45.8 0-88.9-17.9-121.4-50.4A171.2 171.2 0 01340.5 349c0-45.9 17.9-89.1 50.3-121.6S466.3 177 512.2 177s88.9 17.9 121.4 50.4A171.2 171.2 0 01683.9 349c0 45.9-17.9 89.1-50.3 121.6C601.1 503.1 558 521 512.2 521zM880 759h-84v-84c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v84h-84c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h84v84c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-84h84c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8z"
                              />
                            </svg>
                          </span>
                           Register Alias
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </form>
          </div>
          <div
            className="sc-dNLxif cYGCgJ"
          />
          <div
            className="sc-jbKcbu wUzOX"
          >
            <div
              className="sc-kgAjT jWFrne"
            >
              <div
                className="ant-collapse ant-collapse-icon-position-start sc-ksYbfQ hPwOiL"
                role={null}
                style={
                  Object {
                    "marginBottom": "24px",
                  }
                }
              >
                <div
                  className="ant-collapse-item ant-collapse-item-active"
                >
                  <div
                    aria-disabled={false}
                    aria-expanded={true}
                    className="ant-collapse-header"
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <div
                      className="ant-collapse-expand-icon"
                      onClick={null}
                    >
                      <span
                        aria-label="right"
                        className="anticon anticon-right ant-collapse-arrow"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          style={
                            Object {
                              "msTransform": "rotate(90deg)",
                              "transform": "rotate(90deg)",
                            }
                          }
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </div>
                    <span
                      className="ant-collapse-header-text"
                      onClick={null}
                    >
                      <div
                        className="sc-TOsTZ kjYrri"
                      >
                        Registered Aliases
                      </div>
                    </span>
                  </div>
                  <div
                    className="ant-collapse-content ant-collapse-content-active"
                    role={null}
                  >
                    <div
                      className="ant-collapse-content-box"
                    >
                      <div
                        className="ant-space ant-space-horizontal ant-space-align-center"
                        style={
                          Object {
                            "flexWrap": "wrap",
                            "marginBottom": -8,
                          }
                        }
                      >
                        <div
                          className="ant-space-item"
                          style={
                            Object {
                              "paddingBottom": 8,
                            }
                          }
                        >
                          <h3>
                            No registered aliases
                          </h3>
                        </div>
                      </div>
                      <p
                        className="sc-jDwBTQ bcLZea"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="sc-kgAjT jWFrne"
            >
              <div
                className="ant-collapse ant-collapse-icon-position-start sc-ksYbfQ hPwOiL"
                role={null}
                style={
                  Object {
                    "marginBottom": "24px",
                  }
                }
              >
                <div
                  className="ant-collapse-item ant-collapse-item-active"
                >
                  <div
                    aria-disabled={false}
                    aria-expanded={true}
                    className="ant-collapse-header"
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <div
                      className="ant-collapse-expand-icon"
                      onClick={null}
                    >
                      <span
                        aria-label="right"
                        className="anticon anticon-right ant-collapse-arrow"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          style={
                            Object {
                              "msTransform": "rotate(90deg)",
                              "transform": "rotate(90deg)",
                            }
                          }
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </div>
                    <span
                      className="ant-collapse-header-text"
                      onClick={null}
                    >
                      <div
                        className="sc-TOsTZ kjYrri"
                      >
                        Pending Aliases
                      </div>
                    </span>
                  </div>
                  <div
                    className="ant-collapse-content ant-collapse-content-active"
                    role={null}
                  >
                    <div
                      className="ant-collapse-content-box"
                    >
                      <div
                        className="ant-space ant-space-horizontal ant-space-align-center"
                        style={
                          Object {
                            "flexWrap": "wrap",
                            "marginBottom": -8,
                          }
                        }
                      >
                        <div
                          className="ant-space-item"
                          style={
                            Object {
                              "paddingBottom": 8,
                            }
                          }
                        >
                          <h3>
                            No pending aliases
                          </h3>
                        </div>
                      </div>
                      <p
                        className="sc-jDwBTQ bcLZea"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Wallet with XEC balances and tokens 1`] = `
Array [
  <div
    className="sc-eHgmQL jcvoLq"
  >
    <div
      className="sc-jKJlTe jrzEcV"
    >
      <h4
        className="sc-eNQAEJ cwroNb"
      >
        MigrationTestAlpha
      </h4>
      <a
        href="/configure"
        onClick={[Function]}
      >
        <svg
          className="sc-jTzLTM bTdWCF"
        >
          edit.svg
        </svg>
      </a>
      <div>
         
        <button
          aria-checked={false}
          className="ant-switch ant-switch-small"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="switch"
          type="button"
        >
          <div
            className="ant-switch-handle"
          />
          <span
            className="ant-switch-inner"
          >
            <svg
              className="sc-kAzzGY fUTkYj"
            >
              eye-invisible.svg
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="sc-brqgnP jHOLle"
    >
      You currently have 0 
      XEC
      <br />
      Deposit some funds to use this feature
    </div>
  </div>,
  <div
    className="sc-iAyFgw eRQdeW"
  >
    <div
      className="ant-row"
      style={Object {}}
      type="flex"
    >
      <div
        className="ant-col ant-col-24"
        style={Object {}}
      >
        <div
          className="sc-jbKcbu wUzOX"
        >
          <h2>
            eCash Namespace Alias
          </h2>
        </div>
        <div
          className="sc-iAyFgw eRQdeW"
        >
          <div
            className="sc-bRBYWo fqvvXE"
          >
            <form
              className="ant-form ant-form-horizontal"
              onReset={[Function]}
              onSubmit={[Function]}
              style={
                Object {
                  "width": "auto",
                }
              }
            >
              <div
                className="ant-form-item"
              >
                <div
                  className="ant-row ant-form-item-row"
                  style={Object {}}
                >
                  <div
                    className="ant-col ant-form-item-control"
                    style={Object {}}
                  >
                    <div
                      className="ant-form-item-control-input"
                    >
                      <div
                        className="ant-form-item-control-input-content"
                      >
                        <div
                          className="sc-bRBYWo fqvvXE"
                        >
                          <div
                            className="ant-form-item ant-form-item-with-help ant-form-item-has-error"
                          >
                            <div
                              className="ant-row ant-form-item-row"
                              style={Object {}}
                            >
                              <div
                                className="ant-col ant-form-item-control"
                                style={Object {}}
                              >
                                <div
                                  className="ant-form-item-control-input"
                                >
                                  <div
                                    className="ant-form-item-control-input-content"
                                  >
                                    <span
                                      className="ant-input-group-wrapper ant-input-group-wrapper-status-error"
                                    >
                                      <span
                                        className="ant-input-wrapper ant-input-group"
                                      >
                                        <span
                                          className="ant-input-affix-wrapper ant-input-affix-wrapper-status-error"
                                          hidden={null}
                                          onClick={[Function]}
                                          style={null}
                                        >
                                          <span
                                            className="ant-input-prefix"
                                          >
                                            <svg
                                              className="sc-kGXeez iHLPLV"
                                            >
                                              user.svg
                                            </svg>
                                          </span>
                                          <input
                                            autoComplete="off"
                                            className="ant-input"
                                            hidden={null}
                                            name="aliasName"
                                            onBlur={[Function]}
                                            onChange={[Function]}
                                            onFocus={[Function]}
                                            onKeyDown={[Function]}
                                            placeholder="Enter a desired alias"
                                            required={true}
                                            style={null}
                                            type="text"
                                            value=""
                                          />
                                        </span>
                                        <span
                                          className="ant-input-group-addon"
                                        >
                                           . xec
                                        </span>
                                      </span>
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <p />
                        <div
                          className="sc-hmzhuo fYlBBZ"
                        >
                          <label
                            className="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-wrapper-in-form-item sc-fBuWsC bHZMFZ"
                          >
                            <span
                              className="ant-checkbox ant-checkbox-checked"
                              style={Object {}}
                            >
                              <input
                                checked={true}
                                className="ant-checkbox-input"
                                disabled={false}
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                onKeyDown={[Function]}
                                onKeyPress={[Function]}
                                onKeyUp={[Function]}
                                type="checkbox"
                              />
                              <span
                                className="ant-checkbox-inner"
                              />
                            </span>
                            <span>
                              Register to the active wallet address
                            </span>
                          </label>
                        </div>
                        <button
                          className="sc-fAjcbJ hqeYCi"
                          disabled={true}
                          onClick={[Function]}
                        >
                          <span
                            aria-label="user-add"
                            className="anticon anticon-user-add"
                            role="img"
                            style={
                              Object {
                                "fontSize": 20,
                              }
                            }
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="user-add"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M678.3 642.4c24.2-13 51.9-20.4 81.4-20.4h.1c3 0 4.4-3.6 2.2-5.6a371.67 371.67 0 00-103.7-65.8c-.4-.2-.8-.3-1.2-.5C719.2 505 759.6 431.7 759.6 349c0-137-110.8-248-247.5-248S264.7 212 264.7 349c0 82.7 40.4 156 102.6 201.1-.4.2-.8.3-1.2.5-44.7 18.9-84.8 46-119.3 80.6a373.42 373.42 0 00-80.4 119.5A373.6 373.6 0 00137 888.8a8 8 0 008 8.2h59.9c4.3 0 7.9-3.5 8-7.8 2-77.2 32.9-149.5 87.6-204.3C357 628.2 432.2 597 512.2 597c56.7 0 111.1 15.7 158 45.1a8.1 8.1 0 008.1.3zM512.2 521c-45.8 0-88.9-17.9-121.4-50.4A171.2 171.2 0 01340.5 349c0-45.9 17.9-89.1 50.3-121.6S466.3 177 512.2 177s88.9 17.9 121.4 50.4A171.2 171.2 0 01683.9 349c0 45.9-17.9 89.1-50.3 121.6C601.1 503.1 558 521 512.2 521zM880 759h-84v-84c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v84h-84c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h84v84c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-84h84c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8z"
                              />
                            </svg>
                          </span>
                           Register Alias
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </form>
          </div>
          <div
            className="sc-dNLxif cYGCgJ"
          />
          <div
            className="sc-jbKcbu wUzOX"
          >
            <div
              className="sc-kgAjT jWFrne"
            >
              <div
                className="ant-collapse ant-collapse-icon-position-start sc-ksYbfQ hPwOiL"
                role={null}
                style={
                  Object {
                    "marginBottom": "24px",
                  }
                }
              >
                <div
                  className="ant-collapse-item ant-collapse-item-active"
                >
                  <div
                    aria-disabled={false}
                    aria-expanded={true}
                    className="ant-collapse-header"
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <div
                      className="ant-collapse-expand-icon"
                      onClick={null}
                    >
                      <span
                        aria-label="right"
                        className="anticon anticon-right ant-collapse-arrow"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          style={
                            Object {
                              "msTransform": "rotate(90deg)",
                              "transform": "rotate(90deg)",
                            }
                          }
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </div>
                    <span
                      className="ant-collapse-header-text"
                      onClick={null}
                    >
                      <div
                        className="sc-TOsTZ kjYrri"
                      >
                        Registered Aliases
                      </div>
                    </span>
                  </div>
                  <div
                    className="ant-collapse-content ant-collapse-content-active"
                    role={null}
                  >
                    <div
                      className="ant-collapse-content-box"
                    >
                      <div
                        className="ant-space ant-space-horizontal ant-space-align-center"
                        style={
                          Object {
                            "flexWrap": "wrap",
                            "marginBottom": -8,
                          }
                        }
                      >
                        <div
                          className="ant-space-item"
                          style={
                            Object {
                              "paddingBottom": 8,
                            }
                          }
                        >
                          <h3>
                            No registered aliases
                          </h3>
                        </div>
                      </div>
                      <p
                        className="sc-jDwBTQ bcLZea"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="sc-kgAjT jWFrne"
            >
              <div
                className="ant-collapse ant-collapse-icon-position-start sc-ksYbfQ hPwOiL"
                role={null}
                style={
                  Object {
                    "marginBottom": "24px",
                  }
                }
              >
                <div
                  className="ant-collapse-item ant-collapse-item-active"
                >
                  <div
                    aria-disabled={false}
                    aria-expanded={true}
                    className="ant-collapse-header"
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <div
                      className="ant-collapse-expand-icon"
                      onClick={null}
                    >
                      <span
                        aria-label="right"
                        className="anticon anticon-right ant-collapse-arrow"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          style={
                            Object {
                              "msTransform": "rotate(90deg)",
                              "transform": "rotate(90deg)",
                            }
                          }
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </div>
                    <span
                      className="ant-collapse-header-text"
                      onClick={null}
                    >
                      <div
                        className="sc-TOsTZ kjYrri"
                      >
                        Pending Aliases
                      </div>
                    </span>
                  </div>
                  <div
                    className="ant-collapse-content ant-collapse-content-active"
                    role={null}
                  >
                    <div
                      className="ant-collapse-content-box"
                    >
                      <div
                        className="ant-space ant-space-horizontal ant-space-align-center"
                        style={
                          Object {
                            "flexWrap": "wrap",
                            "marginBottom": -8,
                          }
                        }
                      >
                        <div
                          className="ant-space-item"
                          style={
                            Object {
                              "paddingBottom": 8,
                            }
                          }
                        >
                          <h3>
                            No pending aliases
                          </h3>
                        </div>
                      </div>
                      <p
                        className="sc-jDwBTQ bcLZea"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Wallet with XEC balances and tokens and state field 1`] = `
Array [
  <div
    className="sc-eHgmQL jcvoLq"
  >
    <div
      className="sc-jKJlTe jrzEcV"
    >
      <h4
        className="sc-eNQAEJ cwroNb"
      >
        MigrationTestAlpha
      </h4>
      <a
        href="/configure"
        onClick={[Function]}
      >
        <svg
          className="sc-jTzLTM bTdWCF"
        >
          edit.svg
        </svg>
      </a>
      <div>
         
        <button
          aria-checked={false}
          className="ant-switch ant-switch-small"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="switch"
          type="button"
        >
          <div
            className="ant-switch-handle"
          />
          <span
            className="ant-switch-inner"
          >
            <svg
              className="sc-kAzzGY fUTkYj"
            >
              eye-invisible.svg
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="sc-jWBwVP gdMlXD"
    >
      <span
        className="sc-caSCKo gaZMix"
      >
         
        0.06
         
        XEC
         
      </span>
    </div>
  </div>,
  <div
    className="sc-iAyFgw eRQdeW"
  >
    <div
      className="ant-row"
      style={Object {}}
      type="flex"
    >
      <div
        className="ant-col ant-col-24"
        style={Object {}}
      >
        <div
          className="sc-jbKcbu wUzOX"
        >
          <h2>
            eCash Namespace Alias
          </h2>
        </div>
        <div
          className="sc-iAyFgw eRQdeW"
        >
          <div
            className="sc-bRBYWo fqvvXE"
          >
            <form
              className="ant-form ant-form-horizontal"
              onReset={[Function]}
              onSubmit={[Function]}
              style={
                Object {
                  "width": "auto",
                }
              }
            >
              <div
                className="ant-form-item"
              >
                <div
                  className="ant-row ant-form-item-row"
                  style={Object {}}
                >
                  <div
                    className="ant-col ant-form-item-control"
                    style={Object {}}
                  >
                    <div
                      className="ant-form-item-control-input"
                    >
                      <div
                        className="ant-form-item-control-input-content"
                      >
                        <div
                          className="sc-bRBYWo fqvvXE"
                        >
                          <div
                            className="ant-form-item ant-form-item-with-help ant-form-item-has-error"
                          >
                            <div
                              className="ant-row ant-form-item-row"
                              style={Object {}}
                            >
                              <div
                                className="ant-col ant-form-item-control"
                                style={Object {}}
                              >
                                <div
                                  className="ant-form-item-control-input"
                                >
                                  <div
                                    className="ant-form-item-control-input-content"
                                  >
                                    <span
                                      className="ant-input-group-wrapper ant-input-group-wrapper-status-error"
                                    >
                                      <span
                                        className="ant-input-wrapper ant-input-group"
                                      >
                                        <span
                                          className="ant-input-affix-wrapper ant-input-affix-wrapper-status-error"
                                          hidden={null}
                                          onClick={[Function]}
                                          style={null}
                                        >
                                          <span
                                            className="ant-input-prefix"
                                          >
                                            <svg
                                              className="sc-kGXeez iHLPLV"
                                            >
                                              user.svg
                                            </svg>
                                          </span>
                                          <input
                                            autoComplete="off"
                                            className="ant-input"
                                            hidden={null}
                                            name="aliasName"
                                            onBlur={[Function]}
                                            onChange={[Function]}
                                            onFocus={[Function]}
                                            onKeyDown={[Function]}
                                            placeholder="Enter a desired alias"
                                            required={true}
                                            style={null}
                                            type="text"
                                            value=""
                                          />
                                        </span>
                                        <span
                                          className="ant-input-group-addon"
                                        >
                                           . xec
                                        </span>
                                      </span>
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <p />
                        <div
                          className="sc-hmzhuo fYlBBZ"
                        >
                          <label
                            className="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-wrapper-in-form-item sc-fBuWsC bHZMFZ"
                          >
                            <span
                              className="ant-checkbox ant-checkbox-checked"
                              style={Object {}}
                            >
                              <input
                                checked={true}
                                className="ant-checkbox-input"
                                disabled={false}
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                onKeyDown={[Function]}
                                onKeyPress={[Function]}
                                onKeyUp={[Function]}
                                type="checkbox"
                              />
                              <span
                                className="ant-checkbox-inner"
                              />
                            </span>
                            <span>
                              Register to the active wallet address
                            </span>
                          </label>
                        </div>
                        <button
                          className="sc-fAjcbJ hqeYCi"
                          disabled={true}
                          onClick={[Function]}
                        >
                          <span
                            aria-label="user-add"
                            className="anticon anticon-user-add"
                            role="img"
                            style={
                              Object {
                                "fontSize": 20,
                              }
                            }
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="user-add"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M678.3 642.4c24.2-13 51.9-20.4 81.4-20.4h.1c3 0 4.4-3.6 2.2-5.6a371.67 371.67 0 00-103.7-65.8c-.4-.2-.8-.3-1.2-.5C719.2 505 759.6 431.7 759.6 349c0-137-110.8-248-247.5-248S264.7 212 264.7 349c0 82.7 40.4 156 102.6 201.1-.4.2-.8.3-1.2.5-44.7 18.9-84.8 46-119.3 80.6a373.42 373.42 0 00-80.4 119.5A373.6 373.6 0 00137 888.8a8 8 0 008 8.2h59.9c4.3 0 7.9-3.5 8-7.8 2-77.2 32.9-149.5 87.6-204.3C357 628.2 432.2 597 512.2 597c56.7 0 111.1 15.7 158 45.1a8.1 8.1 0 008.1.3zM512.2 521c-45.8 0-88.9-17.9-121.4-50.4A171.2 171.2 0 01340.5 349c0-45.9 17.9-89.1 50.3-121.6S466.3 177 512.2 177s88.9 17.9 121.4 50.4A171.2 171.2 0 01683.9 349c0 45.9-17.9 89.1-50.3 121.6C601.1 503.1 558 521 512.2 521zM880 759h-84v-84c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v84h-84c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h84v84c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-84h84c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8z"
                              />
                            </svg>
                          </span>
                           Register Alias
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </form>
          </div>
          <div
            className="sc-dNLxif cYGCgJ"
          />
          <div
            className="sc-jbKcbu wUzOX"
          >
            <div
              className="sc-kgAjT jWFrne"
            >
              <div
                className="ant-collapse ant-collapse-icon-position-start sc-ksYbfQ hPwOiL"
                role={null}
                style={
                  Object {
                    "marginBottom": "24px",
                  }
                }
              >
                <div
                  className="ant-collapse-item ant-collapse-item-active"
                >
                  <div
                    aria-disabled={false}
                    aria-expanded={true}
                    className="ant-collapse-header"
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <div
                      className="ant-collapse-expand-icon"
                      onClick={null}
                    >
                      <span
                        aria-label="right"
                        className="anticon anticon-right ant-collapse-arrow"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          style={
                            Object {
                              "msTransform": "rotate(90deg)",
                              "transform": "rotate(90deg)",
                            }
                          }
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </div>
                    <span
                      className="ant-collapse-header-text"
                      onClick={null}
                    >
                      <div
                        className="sc-TOsTZ kjYrri"
                      >
                        Registered Aliases
                      </div>
                    </span>
                  </div>
                  <div
                    className="ant-collapse-content ant-collapse-content-active"
                    role={null}
                  >
                    <div
                      className="ant-collapse-content-box"
                    >
                      <div
                        className="ant-space ant-space-horizontal ant-space-align-center"
                        style={
                          Object {
                            "flexWrap": "wrap",
                            "marginBottom": -8,
                          }
                        }
                      >
                        <div
                          className="ant-space-item"
                          style={
                            Object {
                              "paddingBottom": 8,
                            }
                          }
                        >
                          <h3>
                            No registered aliases
                          </h3>
                        </div>
                      </div>
                      <p
                        className="sc-jDwBTQ bcLZea"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="sc-kgAjT jWFrne"
            >
              <div
                className="ant-collapse ant-collapse-icon-position-start sc-ksYbfQ hPwOiL"
                role={null}
                style={
                  Object {
                    "marginBottom": "24px",
                  }
                }
              >
                <div
                  className="ant-collapse-item ant-collapse-item-active"
                >
                  <div
                    aria-disabled={false}
                    aria-expanded={true}
                    className="ant-collapse-header"
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <div
                      className="ant-collapse-expand-icon"
                      onClick={null}
                    >
                      <span
                        aria-label="right"
                        className="anticon anticon-right ant-collapse-arrow"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          style={
                            Object {
                              "msTransform": "rotate(90deg)",
                              "transform": "rotate(90deg)",
                            }
                          }
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </div>
                    <span
                      className="ant-collapse-header-text"
                      onClick={null}
                    >
                      <div
                        className="sc-TOsTZ kjYrri"
                      >
                        Pending Aliases
                      </div>
                    </span>
                  </div>
                  <div
                    className="ant-collapse-content ant-collapse-content-active"
                    role={null}
                  >
                    <div
                      className="ant-collapse-content-box"
                    >
                      <div
                        className="ant-space ant-space-horizontal ant-space-align-center"
                        style={
                          Object {
                            "flexWrap": "wrap",
                            "marginBottom": -8,
                          }
                        }
                      >
                        <div
                          className="ant-space-item"
                          style={
                            Object {
                              "paddingBottom": 8,
                            }
                          }
                        >
                          <h3>
                            No pending aliases
                          </h3>
                        </div>
                      </div>
                      <p
                        className="sc-jDwBTQ bcLZea"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Wallet without XEC balance 1`] = `
Array [
  <div
    className="sc-eHgmQL jcvoLq"
  >
    <div
      className="sc-jKJlTe jrzEcV"
    >
      <h4
        className="sc-eNQAEJ cwroNb"
      >
        MigrationTestAlpha
      </h4>
      <a
        href="/configure"
        onClick={[Function]}
      >
        <svg
          className="sc-jTzLTM bTdWCF"
        >
          edit.svg
        </svg>
      </a>
      <div>
         
        <button
          aria-checked={false}
          className="ant-switch ant-switch-small"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="switch"
          type="button"
        >
          <div
            className="ant-switch-handle"
          />
          <span
            className="ant-switch-inner"
          >
            <svg
              className="sc-kAzzGY fUTkYj"
            >
              eye-invisible.svg
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="sc-brqgnP jHOLle"
    >
      You currently have 0 
      XEC
      <br />
      Deposit some funds to use this feature
    </div>
  </div>,
  <div
    className="sc-iAyFgw eRQdeW"
  >
    <div
      className="ant-row"
      style={Object {}}
      type="flex"
    >
      <div
        className="ant-col ant-col-24"
        style={Object {}}
      >
        <div
          className="sc-jbKcbu wUzOX"
        >
          <h2>
            eCash Namespace Alias
          </h2>
        </div>
        <div
          className="sc-iAyFgw eRQdeW"
        >
          <div
            className="sc-bRBYWo fqvvXE"
          >
            <form
              className="ant-form ant-form-horizontal"
              onReset={[Function]}
              onSubmit={[Function]}
              style={
                Object {
                  "width": "auto",
                }
              }
            >
              <div
                className="ant-form-item"
              >
                <div
                  className="ant-row ant-form-item-row"
                  style={Object {}}
                >
                  <div
                    className="ant-col ant-form-item-control"
                    style={Object {}}
                  >
                    <div
                      className="ant-form-item-control-input"
                    >
                      <div
                        className="ant-form-item-control-input-content"
                      >
                        <div
                          className="sc-bRBYWo fqvvXE"
                        >
                          <div
                            className="ant-form-item ant-form-item-with-help ant-form-item-has-error"
                          >
                            <div
                              className="ant-row ant-form-item-row"
                              style={Object {}}
                            >
                              <div
                                className="ant-col ant-form-item-control"
                                style={Object {}}
                              >
                                <div
                                  className="ant-form-item-control-input"
                                >
                                  <div
                                    className="ant-form-item-control-input-content"
                                  >
                                    <span
                                      className="ant-input-group-wrapper ant-input-group-wrapper-status-error"
                                    >
                                      <span
                                        className="ant-input-wrapper ant-input-group"
                                      >
                                        <span
                                          className="ant-input-affix-wrapper ant-input-affix-wrapper-status-error"
                                          hidden={null}
                                          onClick={[Function]}
                                          style={null}
                                        >
                                          <span
                                            className="ant-input-prefix"
                                          >
                                            <svg
                                              className="sc-kGXeez iHLPLV"
                                            >
                                              user.svg
                                            </svg>
                                          </span>
                                          <input
                                            autoComplete="off"
                                            className="ant-input"
                                            hidden={null}
                                            name="aliasName"
                                            onBlur={[Function]}
                                            onChange={[Function]}
                                            onFocus={[Function]}
                                            onKeyDown={[Function]}
                                            placeholder="Enter a desired alias"
                                            required={true}
                                            style={null}
                                            type="text"
                                            value=""
                                          />
                                        </span>
                                        <span
                                          className="ant-input-group-addon"
                                        >
                                           . xec
                                        </span>
                                      </span>
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <p />
                        <div
                          className="sc-hmzhuo fYlBBZ"
                        >
                          <label
                            className="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-wrapper-in-form-item sc-fBuWsC bHZMFZ"
                          >
                            <span
                              className="ant-checkbox ant-checkbox-checked"
                              style={Object {}}
                            >
                              <input
                                checked={true}
                                className="ant-checkbox-input"
                                disabled={false}
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                onKeyDown={[Function]}
                                onKeyPress={[Function]}
                                onKeyUp={[Function]}
                                type="checkbox"
                              />
                              <span
                                className="ant-checkbox-inner"
                              />
                            </span>
                            <span>
                              Register to the active wallet address
                            </span>
                          </label>
                        </div>
                        <button
                          className="sc-fAjcbJ hqeYCi"
                          disabled={true}
                          onClick={[Function]}
                        >
                          <span
                            aria-label="user-add"
                            className="anticon anticon-user-add"
                            role="img"
                            style={
                              Object {
                                "fontSize": 20,
                              }
                            }
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="user-add"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M678.3 642.4c24.2-13 51.9-20.4 81.4-20.4h.1c3 0 4.4-3.6 2.2-5.6a371.67 371.67 0 00-103.7-65.8c-.4-.2-.8-.3-1.2-.5C719.2 505 759.6 431.7 759.6 349c0-137-110.8-248-247.5-248S264.7 212 264.7 349c0 82.7 40.4 156 102.6 201.1-.4.2-.8.3-1.2.5-44.7 18.9-84.8 46-119.3 80.6a373.42 373.42 0 00-80.4 119.5A373.6 373.6 0 00137 888.8a8 8 0 008 8.2h59.9c4.3 0 7.9-3.5 8-7.8 2-77.2 32.9-149.5 87.6-204.3C357 628.2 432.2 597 512.2 597c56.7 0 111.1 15.7 158 45.1a8.1 8.1 0 008.1.3zM512.2 521c-45.8 0-88.9-17.9-121.4-50.4A171.2 171.2 0 01340.5 349c0-45.9 17.9-89.1 50.3-121.6S466.3 177 512.2 177s88.9 17.9 121.4 50.4A171.2 171.2 0 01683.9 349c0 45.9-17.9 89.1-50.3 121.6C601.1 503.1 558 521 512.2 521zM880 759h-84v-84c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v84h-84c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h84v84c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-84h84c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8z"
                              />
                            </svg>
                          </span>
                           Register Alias
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </form>
          </div>
          <div
            className="sc-dNLxif cYGCgJ"
          />
          <div
            className="sc-jbKcbu wUzOX"
          >
            <div
              className="sc-kgAjT jWFrne"
            >
              <div
                className="ant-collapse ant-collapse-icon-position-start sc-ksYbfQ hPwOiL"
                role={null}
                style={
                  Object {
                    "marginBottom": "24px",
                  }
                }
              >
                <div
                  className="ant-collapse-item ant-collapse-item-active"
                >
                  <div
                    aria-disabled={false}
                    aria-expanded={true}
                    className="ant-collapse-header"
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <div
                      className="ant-collapse-expand-icon"
                      onClick={null}
                    >
                      <span
                        aria-label="right"
                        className="anticon anticon-right ant-collapse-arrow"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          style={
                            Object {
                              "msTransform": "rotate(90deg)",
                              "transform": "rotate(90deg)",
                            }
                          }
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </div>
                    <span
                      className="ant-collapse-header-text"
                      onClick={null}
                    >
                      <div
                        className="sc-TOsTZ kjYrri"
                      >
                        Registered Aliases
                      </div>
                    </span>
                  </div>
                  <div
                    className="ant-collapse-content ant-collapse-content-active"
                    role={null}
                  >
                    <div
                      className="ant-collapse-content-box"
                    >
                      <div
                        className="ant-space ant-space-horizontal ant-space-align-center"
                        style={
                          Object {
                            "flexWrap": "wrap",
                            "marginBottom": -8,
                          }
                        }
                      >
                        <div
                          className="ant-space-item"
                          style={
                            Object {
                              "paddingBottom": 8,
                            }
                          }
                        >
                          <h3>
                            No registered aliases
                          </h3>
                        </div>
                      </div>
                      <p
                        className="sc-jDwBTQ bcLZea"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="sc-kgAjT jWFrne"
            >
              <div
                className="ant-collapse ant-collapse-icon-position-start sc-ksYbfQ hPwOiL"
                role={null}
                style={
                  Object {
                    "marginBottom": "24px",
                  }
                }
              >
                <div
                  className="ant-collapse-item ant-collapse-item-active"
                >
                  <div
                    aria-disabled={false}
                    aria-expanded={true}
                    className="ant-collapse-header"
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <div
                      className="ant-collapse-expand-icon"
                      onClick={null}
                    >
                      <span
                        aria-label="right"
                        className="anticon anticon-right ant-collapse-arrow"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          style={
                            Object {
                              "msTransform": "rotate(90deg)",
                              "transform": "rotate(90deg)",
                            }
                          }
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </div>
                    <span
                      className="ant-collapse-header-text"
                      onClick={null}
                    >
                      <div
                        className="sc-TOsTZ kjYrri"
                      >
                        Pending Aliases
                      </div>
                    </span>
                  </div>
                  <div
                    className="ant-collapse-content ant-collapse-content-active"
                    role={null}
                  >
                    <div
                      className="ant-collapse-content-box"
                    >
                      <div
                        className="ant-space ant-space-horizontal ant-space-align-center"
                        style={
                          Object {
                            "flexWrap": "wrap",
                            "marginBottom": -8,
                          }
                        }
                      >
                        <div
                          className="ant-space-item"
                          style={
                            Object {
                              "paddingBottom": 8,
                            }
                          }
                        >
                          <h3>
                            No pending aliases
                          </h3>
                        </div>
                      </div>
                      <p
                        className="sc-jDwBTQ bcLZea"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Without wallet defined 1`] = `
Array [
  <div
    className="sc-eHgmQL jcvoLq"
  >
    <div
      className="sc-jKJlTe jrzEcV"
    >
      <a
        href="/configure"
        onClick={[Function]}
      >
        <svg
          className="sc-jTzLTM bTdWCF"
        >
          edit.svg
        </svg>
      </a>
      <div>
         
        <button
          aria-checked={false}
          className="ant-switch ant-switch-small"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="switch"
          type="button"
        >
          <div
            className="ant-switch-handle"
          />
          <span
            className="ant-switch-inner"
          >
            <svg
              className="sc-kAzzGY fUTkYj"
            >
              eye-invisible.svg
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="sc-brqgnP jHOLle"
    >
      You currently have 0 
      XEC
      <br />
      Deposit some funds to use this feature
    </div>
  </div>,
  <div
    className="sc-iAyFgw eRQdeW"
  >
    <div
      className="ant-row"
      style={Object {}}
      type="flex"
    >
      <div
        className="ant-col ant-col-24"
        style={Object {}}
      >
        <div
          className="sc-jbKcbu wUzOX"
        >
          <h2>
            eCash Namespace Alias
          </h2>
        </div>
        <div
          className="sc-iAyFgw eRQdeW"
        >
          <div
            className="sc-bRBYWo fqvvXE"
          >
            <form
              className="ant-form ant-form-horizontal"
              onReset={[Function]}
              onSubmit={[Function]}
              style={
                Object {
                  "width": "auto",
                }
              }
            >
              <div
                className="ant-form-item"
              >
                <div
                  className="ant-row ant-form-item-row"
                  style={Object {}}
                >
                  <div
                    className="ant-col ant-form-item-control"
                    style={Object {}}
                  >
                    <div
                      className="ant-form-item-control-input"
                    >
                      <div
                        className="ant-form-item-control-input-content"
                      >
                        <div
                          className="sc-bRBYWo fqvvXE"
                        >
                          <div
                            className="ant-form-item ant-form-item-with-help ant-form-item-has-error"
                          >
                            <div
                              className="ant-row ant-form-item-row"
                              style={Object {}}
                            >
                              <div
                                className="ant-col ant-form-item-control"
                                style={Object {}}
                              >
                                <div
                                  className="ant-form-item-control-input"
                                >
                                  <div
                                    className="ant-form-item-control-input-content"
                                  >
                                    <span
                                      className="ant-input-group-wrapper ant-input-group-wrapper-status-error"
                                    >
                                      <span
                                        className="ant-input-wrapper ant-input-group"
                                      >
                                        <span
                                          className="ant-input-affix-wrapper ant-input-affix-wrapper-status-error"
                                          hidden={null}
                                          onClick={[Function]}
                                          style={null}
                                        >
                                          <span
                                            className="ant-input-prefix"
                                          >
                                            <svg
                                              className="sc-kGXeez iHLPLV"
                                            >
                                              user.svg
                                            </svg>
                                          </span>
                                          <input
                                            autoComplete="off"
                                            className="ant-input"
                                            hidden={null}
                                            name="aliasName"
                                            onBlur={[Function]}
                                            onChange={[Function]}
                                            onFocus={[Function]}
                                            onKeyDown={[Function]}
                                            placeholder="Enter a desired alias"
                                            required={true}
                                            style={null}
                                            type="text"
                                            value=""
                                          />
                                        </span>
                                        <span
                                          className="ant-input-group-addon"
                                        >
                                           . xec
                                        </span>
                                      </span>
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <p />
                        <div
                          className="sc-hmzhuo fYlBBZ"
                        >
                          <label
                            className="ant-checkbox-wrapper ant-checkbox-wrapper-in-form-item sc-fBuWsC bHZMFZ"
                          >
                            <span
                              className="ant-checkbox"
                              style={Object {}}
                            >
                              <input
                                checked={false}
                                className="ant-checkbox-input"
                                disabled={false}
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                onKeyDown={[Function]}
                                onKeyPress={[Function]}
                                onKeyUp={[Function]}
                                type="checkbox"
                              />
                              <span
                                className="ant-checkbox-inner"
                              />
                            </span>
                            <span>
                              Register to the active wallet address
                            </span>
                          </label>
                        </div>
                        <div
                          className="sc-bRBYWo fqvvXE"
                        >
                          <div
                            className="ant-form-item ant-form-item-with-help ant-form-item-has-error"
                          >
                            <div
                              className="ant-row ant-form-item-row"
                              style={Object {}}
                            >
                              <div
                                className="ant-col ant-form-item-control"
                                style={Object {}}
                              >
                                <div
                                  className="ant-form-item-control-input"
                                >
                                  <div
                                    className="ant-form-item-control-input-content"
                                  >
                                    <span
                                      className="ant-input-affix-wrapper ant-input-affix-wrapper-status-error"
                                      onClick={[Function]}
                                    >
                                      <span
                                        className="ant-input-prefix"
                                      >
                                        <span
                                          aria-label="wallet"
                                          className="anticon anticon-wallet sc-bxivhb iBBRHU"
                                          role="img"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="wallet"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 464H528V448h312v128zm0 264H184V184h656v200H496c-17.7 0-32 14.3-32 32v192c0 17.7 14.3 32 32 32h344v200zM580 512a40 40 0 1080 0 40 40 0 10-80 0z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                      <input
                                        autoComplete="off"
                                        className="ant-input"
                                        hidden={null}
                                        name="aliasAddress"
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onFocus={[Function]}
                                        onKeyDown={[Function]}
                                        placeholder="Enter address for this alias"
                                        required={true}
                                        style={null}
                                        type="text"
                                        value=""
                                      />
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <button
                          className="sc-fAjcbJ hqeYCi"
                          disabled={true}
                          onClick={[Function]}
                        >
                          <span
                            aria-label="user-add"
                            className="anticon anticon-user-add"
                            role="img"
                            style={
                              Object {
                                "fontSize": 20,
                              }
                            }
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="user-add"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M678.3 642.4c24.2-13 51.9-20.4 81.4-20.4h.1c3 0 4.4-3.6 2.2-5.6a371.67 371.67 0 00-103.7-65.8c-.4-.2-.8-.3-1.2-.5C719.2 505 759.6 431.7 759.6 349c0-137-110.8-248-247.5-248S264.7 212 264.7 349c0 82.7 40.4 156 102.6 201.1-.4.2-.8.3-1.2.5-44.7 18.9-84.8 46-119.3 80.6a373.42 373.42 0 00-80.4 119.5A373.6 373.6 0 00137 888.8a8 8 0 008 8.2h59.9c4.3 0 7.9-3.5 8-7.8 2-77.2 32.9-149.5 87.6-204.3C357 628.2 432.2 597 512.2 597c56.7 0 111.1 15.7 158 45.1a8.1 8.1 0 008.1.3zM512.2 521c-45.8 0-88.9-17.9-121.4-50.4A171.2 171.2 0 01340.5 349c0-45.9 17.9-89.1 50.3-121.6S466.3 177 512.2 177s88.9 17.9 121.4 50.4A171.2 171.2 0 01683.9 349c0 45.9-17.9 89.1-50.3 121.6C601.1 503.1 558 521 512.2 521zM880 759h-84v-84c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v84h-84c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h84v84c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-84h84c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8z"
                              />
                            </svg>
                          </span>
                           Register Alias
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </form>
          </div>
          <div
            className="sc-dNLxif cYGCgJ"
          />
          <div
            className="sc-jbKcbu wUzOX"
          >
            <div
              className="sc-kgAjT jWFrne"
            >
              <div
                className="ant-collapse ant-collapse-icon-position-start sc-ksYbfQ hPwOiL"
                role={null}
                style={
                  Object {
                    "marginBottom": "24px",
                  }
                }
              >
                <div
                  className="ant-collapse-item ant-collapse-item-active"
                >
                  <div
                    aria-disabled={false}
                    aria-expanded={true}
                    className="ant-collapse-header"
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <div
                      className="ant-collapse-expand-icon"
                      onClick={null}
                    >
                      <span
                        aria-label="right"
                        className="anticon anticon-right ant-collapse-arrow"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          style={
                            Object {
                              "msTransform": "rotate(90deg)",
                              "transform": "rotate(90deg)",
                            }
                          }
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </div>
                    <span
                      className="ant-collapse-header-text"
                      onClick={null}
                    >
                      <div
                        className="sc-TOsTZ kjYrri"
                      >
                        Registered Aliases
                      </div>
                    </span>
                  </div>
                  <div
                    className="ant-collapse-content ant-collapse-content-active"
                    role={null}
                  >
                    <div
                      className="ant-collapse-content-box"
                    >
                      <div
                        className="ant-space ant-space-horizontal ant-space-align-center"
                        style={
                          Object {
                            "flexWrap": "wrap",
                            "marginBottom": -8,
                          }
                        }
                      >
                        <div
                          className="ant-space-item"
                          style={
                            Object {
                              "paddingBottom": 8,
                            }
                          }
                        >
                          <h3>
                            No registered aliases
                          </h3>
                        </div>
                      </div>
                      <p
                        className="sc-jDwBTQ bcLZea"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="sc-kgAjT jWFrne"
            >
              <div
                className="ant-collapse ant-collapse-icon-position-start sc-ksYbfQ hPwOiL"
                role={null}
                style={
                  Object {
                    "marginBottom": "24px",
                  }
                }
              >
                <div
                  className="ant-collapse-item ant-collapse-item-active"
                >
                  <div
                    aria-disabled={false}
                    aria-expanded={true}
                    className="ant-collapse-header"
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <div
                      className="ant-collapse-expand-icon"
                      onClick={null}
                    >
                      <span
                        aria-label="right"
                        className="anticon anticon-right ant-collapse-arrow"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          style={
                            Object {
                              "msTransform": "rotate(90deg)",
                              "transform": "rotate(90deg)",
                            }
                          }
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </div>
                    <span
                      className="ant-collapse-header-text"
                      onClick={null}
                    >
                      <div
                        className="sc-TOsTZ kjYrri"
                      >
                        Pending Aliases
                      </div>
                    </span>
                  </div>
                  <div
                    className="ant-collapse-content ant-collapse-content-active"
                    role={null}
                  >
                    <div
                      className="ant-collapse-content-box"
                    >
                      <div
                        className="ant-space ant-space-horizontal ant-space-align-center"
                        style={
                          Object {
                            "flexWrap": "wrap",
                            "marginBottom": -8,
                          }
                        }
                      >
                        <div
                          className="ant-space-item"
                          style={
                            Object {
                              "paddingBottom": 8,
                            }
                          }
                        >
                          <h3>
                            No pending aliases
                          </h3>
                        </div>
                      </div>
                      <p
                        className="sc-jDwBTQ bcLZea"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
